<resources>
    <string name="app_name">BtManager | Proje Garajı </string>
    <string name="notSuported">Cihazınız Bluetooth Desteklemiyor!!…</string>
    <string name="action_settings">Settings</string>
    <string name="author">Proje Garajı</string>
    <string name="device_list">Cihazlar</string>
    <string name="title_paired_devices">Eşlenmiş Cihazlar</string>
    <string name="paired_devices">Eşlenmiş Cihazlar</string>
    <string name="title_new_devices">Cihaz Listesi</string>
    <string name="none_paired">Eşlenmiş Cihaz Bulunamadı</string>
    <string name="title_other_devices">Diğer Cihazlar</string>
    <string name="button_scan">Tara</string>
    <string name="scanning">Taranıyor</string>
    <string name="select_device">Cihaz Seçiniz</string>
    <string name="none_found">Cihaz Bulunamadı</string>
    <string name="connectedDevice">Bağlanılan Cihaz:</string>
    <string name="connFailed">Bağlantı Başarısız!</string>
    <string name="connSucceed">Bağlandı!</string>
    <string name="btnConnect">Bağlan!</string>
    <string name="checking">Checking…</string>
    <string name="errorOccured">Error Occured!</string>
    <string name="btnLights">IŞIKLAR(a-p)</string>
    <string name="btnForward">İLERİ(f)</string>
    <string name="btnBackward">GERİ(b)</string>
    <string name="btnRight">SAĞ(r)</string>
    <string name="btnLeft">SOL(l)</string>
</resources>
