<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin" tools:context=".MainActivity"
    android:weightSum="1"
    android:orientation="horizontal"
    android:baselineAligned="false">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLights"
                android:id="@+id/switchLights"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:layout_weight="0.075" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.46"
                android:text="@string/btnForward"
                android:id="@+id/btnForward" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.46"
                android:text="@string/btnBackward"
                android:id="@+id/btnBackward" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.7">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.15">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnConnect"
                    android:id="@+id/btnConnect" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.85">

                <Button
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:text="@string/btnLeft"
                    android:id="@+id/btnLeft"
                    android:layout_weight="0.5" />

                <Button
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:text="@string/btnRight"
                    android:id="@+id/btnRight"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>


</LinearLayout>
